Updated blog structure to prepare for migrating notes

--- a/templates/base.html
+++ b/templates/base.html
@@ -133,7 +133,7 @@
         <div class="justify-between">
           <a class="no-underline" href="/blog/">文章</a>&nbsp;
           <a class="no-underline" href="/newsletters/">電子報</a>&nbsp;
-          <a class="no-underline" href="/archive/">歸檔</a>
+          <a class="no-underline" href="/snapshots/">筆記與短想法</a>&nbsp;
         </div>
       </nav>
     </section>
