--- a/templates/page.html
+++ b/templates/page.html
@@ -26,10 +26,23 @@
         <div class="pt">
           <span>&gt;&gt;</span>
           <a href="{{ get_url(path="@/_index.md",lang=lang) }}">{{trans(key="label_home",lang=lang)}}</a>
-          {% if page.taxonomies %}
+          {% if page.taxonomies.categories %}
           <span class="divider">/</span>
           <a class="category" href="{{ get_taxonomy_url(kind="categories", name=page.taxonomies.categories[0],lang=lang) }}">{{
             page.taxonomies.categories[0] }}</a>
+          
+          {% if page.taxonomies.tags -%}
+          <span class="divider">/</span>
+          {% for tag in page.taxonomies.tags %}
+          <a href="{{ get_taxonomy_url(kind="tags", name=tag,lang=lang) }}">{{ tag }}</a>{% if page.taxonomies.tags | length > 1 %}{% if
+          loop.index != page.taxonomies.tags | length %},{% endif %}{% endif %}
+          {% endfor %}
+          {% endif %}
+          {% endif %}
+          {% if page.taxonomies.kinds %}
+          <span class="divider">/</span>
+          <a class="category" href="{{ get_taxonomy_url(kind="kinds", name=page.taxonomies.kinds[0],lang=lang) }}">{{
+            page.taxonomies.kinds[0] }}</a>
           
           {% if page.taxonomies.tags -%}
           <span class="divider">/</span>
@@ -109,9 +122,10 @@
 {% if page.toc %}
 <h2>{{trans(key="label_table_contents",lang=lang)}}</h2>
 {{ macro::page_toc(toc=page.toc) }}
+{% endif %}
+{% block newsletter_sidebar_slot %}{% endblock newsletter_sidebar_slot %}
+{% if page.taxonomies.categories %}
 <body>
-  {% block newsletter_sidebar_slot %}{% endblock newsletter_sidebar_slot %}
-  {% if page.taxonomies %}
   <h2>看更多相關文章</h2>
   <ul class="list-none text-sm">
     <a class="category" href="{{ get_taxonomy_url(kind="categories", name=page.taxonomies.categories[0],lang=lang) }}">➤&emsp;其他 {{
@@ -122,15 +136,41 @@
     loop.index != page.taxonomies.tags | length %}<br>{% endif %}{% endif %}
     {% endfor %}
     {% endif %}
+  </ul>
+  <br>
+  <br>
+</body>
+<h2>看其他{{trans(key="label_new_posts_list_title",lang=lang) | markdown(inline=true) | safe}}</h2>
+<ul>
+  {% set all_blog_pages = get_section(path="blog/_index"~file_lang_path~".md") -%}
+  {% for page in all_blog_pages.pages | slice(start=0,end=5)  %} 
+  <li>
+    <a class="no-underline"
+      >{{ macro::post_side(page=page) }}
+  </li>
+  {% endfor %} 
+</ul>
+<br>
+{% endif %}
+{% if page.taxonomies.kinds %}
+<body>
+  <h2>看更多相關 Snapshots</h2>
+  <ul class="list-none text-sm">
+    <a class="category" href="{{ get_taxonomy_url(kind="kinds", name=page.taxonomies.kinds[0],lang=lang) }}">➤&emsp;其他 {{
+      page.taxonomies.kinds[0] }} 分類</a><br>      
+    {% if page.taxonomies.tags -%}
+    {% for tag in page.taxonomies.tags %}
+    <a href="{{ get_taxonomy_url(kind="tags", name=tag,lang=lang) }}">➤&emsp;其他 {{ tag }} 標籤</a>{% if page.taxonomies.tags | length > 1 %}{% if
+    loop.index != page.taxonomies.tags | length %}<br>{% endif %}{% endif %}
+    {% endfor %}
     {% endif %}
   </ul>
   <br>
   <br>
 </body>
-
-<h2>看其他{{trans(key="label_new_posts_list_title",lang=lang) | markdown(inline=true) | safe}}</h2>
+<h2>看其他{{trans(key="label_new_snapshots_list_title",lang=lang) | markdown(inline=true) | safe}}</h2>
 <ul>
-  {% set all_blog_pages = get_section(path="blog/_index"~file_lang_path~".md") -%}
+  {% set all_blog_pages = get_section(path="snapshots/_index"~file_lang_path~".md") -%}
   {% for page in all_blog_pages.pages | slice(start=0,end=5)  %} 
   <li>
     <a class="no-underline"
