--- a/templates/newsletter_page.html
+++ b/templates/newsletter_page.html
@@ -1,4 +1,31 @@
-{% extends "page.html" %} {% block detail_meta_slot -%}
+{% extends "page.html" %} 
+{% block breadcrumbs -%}
+  <div class="pt">
+    <span>&gt;&gt;</span>
+    <a class="category" href="/newsletters/">Newsletters</a>
+    {% if page.taxonomies.categories %}
+    <span class="divider">/</span>
+    <a class="category" href="{{ get_taxonomy_url(kind="categories", name=page.taxonomies.categories[0],lang=lang) }}"> {{ page.taxonomies.categories[0] }}</a>
+    {% if page.taxonomies.tags -%}
+    <span class="divider">/</span>
+    {% for tag in page.taxonomies.tags %}
+    <a href="{{ get_taxonomy_url(kind="tags", name=tag,lang=lang) }}">{{ tag }}</a>{% if page.taxonomies.tags | length > 1 %}{% if loop.index != page.taxonomies.tags | length %},{% endif %}{% endif %}
+    {% endfor %}
+    {% endif %}
+    {% endif %}
+    {% if page.taxonomies.kinds %}
+    <span class="divider">/</span>
+    <a class="category" href="{{ get_taxonomy_url(kind="kinds", name=page.taxonomies.kinds[0],lang=lang) }}">{{ page.taxonomies.kinds[0] }}</a>    
+    {% if page.taxonomies.tags -%}
+    <span class="divider">/</span>
+    {% for tag in page.taxonomies.tags %}
+    <a href="{{ get_taxonomy_url(kind="tags", name=tag,lang=lang) }}">{{ tag }}</a>{% if page.taxonomies.tags | length > 1 %}{% if loop.index != page.taxonomies.tags | length %},{% endif %}{% endif %}
+    {% endfor %}
+    {% endif %}
+    {% endif %}
+  </div>
+{% endblock breadcrumbs %}
+{% block detail_meta_slot -%}
 <span>第 {{page.extra.issues }} 期 ｜</span>
 {% endblock detail_meta_slot -%}
 {% block newsletter_sidebar_slot %}
