--- a/templates/snapshot_archive.html
+++ b/templates/snapshot_archive.html
@@ -5,14 +5,14 @@
 {% block ogdesc %}{{ section.title }}{% endblock ogdesc %}
 {% block ogurl %}{{ config.base_url }}{{ section.path }}{% endblock ogurl %}
 {% block main -%}
-<div class="main-box-block">
+<div class="element">
 {% set all_blog_pages = get_section(path="snapshots/_index.md") %}
 
 {% for year, posts in all_blog_pages.pages | group_by(attribute="year") %}
 <h2>{{ year }}</h2>
 
 
-<ul class="list-archive">
+<ul class="list-none">
   {% for post in posts %}
   <li>{{ macro::snapshots_min(page=post) }}</li>
   {% endfor %}
