--- a/templates/taxonomy_list.html
+++ b/templates/taxonomy_list.html
@@ -4,6 +4,22 @@
 {% block description %}All {{ taxonomy.name }}{% endblock description %}
 {% block ogdesc %}All {{ taxonomy.name }}{% endblock ogdesc %}
 {% block ogurl %}{{ config.base_url }}/{{ taxonomy.name }}{% endblock ogurl %}
+{% block nav_bar -%}
+<nav class="navbar-top">
+  <div>
+    <a class="navbar-a" href="{{ config.base_url~lang_prefix_path }}" >
+      <img src="https://pinchlime-screenshots.s3.ap-northeast-1.amazonaws.com/pinchlime-logo-no-sub_FzfQ69.webp" width = "48" height = "48" alt="Logo of Pinchlime" >
+      <div class="navbar-name">&nbsp;Pin 起來</div>
+    </a> 
+  </div>
+  <span>&nbsp;&nbsp;&nbsp;</span>
+  <div class="justify-between">
+    <a class="no-underline" href="/blog/">Blog</a>&nbsp;
+    <a class="no-underline" href="/newsletters/">Newsletters</a>&nbsp;
+    <a class="no-underline" href="/snapshots/">Snapshots</a>&nbsp;
+  </div>
+</nav>
+{% endblock nav_bar %}
 {% block main %}
 <div class="element">
 
