fixed css style

--- a/static/site/styles/site.css
+++ b/static/site/styles/site.css
@@ -213,9 +213,7 @@ ul {
 .no-underline {
   text-decoration: none;
 }
-a:link {
-  color: #000000;
-}
+a:link,
 a:visited {
   -webkit-transition: color 200ms ease;
   transition: color 200ms ease;
