--- a/templates/index.html
+++ b/templates/index.html
@@ -4,11 +4,11 @@
   <div>
     <a class="navbar-a" href="{{ config.base_url~lang_prefix_path }}" >
       <img src="https://pinchlime-screenshots.s3.ap-northeast-1.amazonaws.com/pinchlime-logo-no-sub_FzfQ69.webp" width = "48" height = "48" alt="Logo of Pinchlime" >
-      <div class="navbar-name">&nbsp;Pin 起來</div>
+      <span class="navbar-name">Pin 起來</span>
     </a> 
   </div>
   <span>&nbsp;&nbsp;&nbsp;</span>
-  <div class="justify-between">
+  <div class="navbar-name">
     <a class="no-underline" href="/blog/">Blog</a>&nbsp;
     <a class="no-underline" href="/newsletters/">Newsletters</a>&nbsp;
     <a class="no-underline" href="/snapshots/">Snapshots</a>&nbsp;
