--- a/templates/page.html
+++ b/templates/page.html
@@ -24,11 +24,11 @@
   <div>
     <a class="navbar-a" href="{{ config.base_url~lang_prefix_path }}" >
       <img src="https://pinchlime-screenshots.s3.ap-northeast-1.amazonaws.com/pinchlime-logo-no-sub_FzfQ69.webp" width = "48" height = "48" alt="Logo of Pinchlime" >
-      <div class="navbar-name">&nbsp;Pin 起來</div>
+      <span class="navbar-name">Pin 起來</span>
     </a> 
   </div>
   <span>&nbsp;&nbsp;&nbsp;</span>
-  <div class="justify-between">
+  <div class="navbar-name">
     <a class="no-underline" href="/blog/">Blog</a>&nbsp;
     <a class="no-underline" href="/newsletters/">Newsletters</a>&nbsp;
     <a class="no-underline" href="/snapshots/">Snapshots</a>&nbsp;
@@ -39,11 +39,11 @@
   <div>
     <a class="navbar-snapshots-a" style="color: #ffffff" href="{{ config.base_url~lang_prefix_path }}" >
       <img src="https://pinchlime-screenshots.s3.ap-northeast-1.amazonaws.com/pinchlime-logo-02-no-sub-96x96_Bgz9Ey.webp" width = "48" height = "48" alt="Logo of Pinchlime" >
-      <div class="navbar-snapshots-name">&nbsp;Pin 起來</div>
+      <span class="navbar-snapshots-name">Pin 起來</span>
     </a> 
   </div>
   <span>&nbsp;&nbsp;&nbsp;</span>
-  <div class="justify-between">
+  <div class="navbar-snapshots-name">
     <a class="no-underline" href="/blog/">Blog</a>&nbsp;
     <a class="no-underline" href="/newsletters/">Newsletters</a>&nbsp;
     <a class="no-underline" href="/snapshots/">Snapshots</a>&nbsp;
@@ -82,7 +82,7 @@
         </div>
         {% endblock breadcrumbs %}
         <div>
-          <h1 style="font-size:2rem;">{{ page.title }}</h1>
+          <h1>{{ page.title }}</h1>
           <div class="muted">
             <span>{% block detail_meta_slot %}{% endblock detail_meta_slot %}</span><span>{% if page.date %}{{ trans(key="label_created",lang=lang)}} {{ page.date }}{% endif %}{% if page.updated %} | {{trans(key="label_updated",lang=lang)}} {{ page.updated }} {% endif %}</span>
           </div>
