--- a/templates/snapshot_archive.html
+++ b/templates/snapshot_archive.html
@@ -4,6 +4,22 @@
 {% block description %}{{ section.title }}{% endblock description %}
 {% block ogdesc %}{{ section.title }}{% endblock ogdesc %}
 {% block ogurl %}{{ config.base_url }}{{ section.path }}{% endblock ogurl %}
+{% block nav_bar -%}
+<nav class="navbar-snapshots-top">
+  <div>
+    <a class="navbar-snapshots-a" style="color: #ffffff" href="{{ config.base_url~lang_prefix_path }}" >
+      <img src="https://pinchlime-screenshots.s3.ap-northeast-1.amazonaws.com/pinchlime-logo-02-no-sub-96x96_Bgz9Ey.webp" width = "48" height = "48" alt="Logo of Pinchlime" >
+      <span class="navbar-snapshots-name">Pin 起來</span>
+    </a> 
+  </div>
+  <span>&nbsp;&nbsp;&nbsp;</span>
+  <div class="navbar-snapshots-name">
+    <a class="no-underline" href="/blog/">Blog</a>&nbsp;
+    <a class="no-underline" href="/newsletters/">Newsletters</a>&nbsp;
+    <a class="no-underline" href="/snapshots/">Snapshots</a>&nbsp;
+  </div>
+</nav>
+{% endblock nav_bar %}
 {% block main -%}
 <div class="element">
 {% set all_blog_pages = get_section(path="snapshots/_index.md") %}
