--- a/templates/base.html
+++ b/templates/base.html
@@ -108,7 +108,7 @@
       name="twitter:image:alt"
       content="{% block ogaltimg %}{{ config.title }}{% endblock ogaltimg %}" />
     {% else %}
-    <meta name="twitter:image" content="https://pinchlime-screenshots.s3.ap-northeast-1.amazonaws.com/og-pinchlime-logo_Huhf2P.png" />
+    <meta name="twitter:image" content="https://pinchlime-screenshots.s3.ap-northeast-1.amazonaws.com/og-1200-630_n3S1PT.png" />
     <meta
       name="twitter:image:alt"
       content="{% block ogaltimg %}{{ config.title }}{% endblock ogaltimg %}" />
