implement search function

--- a/templates/archive.html
+++ b/templates/archive.html
@@ -17,6 +17,7 @@
     <a class="no-underline" href="/blog/">Blog</a>&nbsp;
     <a class="no-underline" href="/newsletters/">Newsletters</a>&nbsp;
     <a class="no-underline" href="/snapshots/">Snapshots</a>&nbsp;
+    <a class="no-underline" href="/search/">Search</a>
   </div>
 </nav>
 {% endblock nav_bar %}
