--- a/templates/page.html
+++ b/templates/page.html
@@ -32,6 +32,7 @@
     <a class="no-underline" href="/blog/">Blog</a>&nbsp;
     <a class="no-underline" href="/newsletters/">Newsletters</a>&nbsp;
     <a class="no-underline" href="/snapshots/">Snapshots</a>&nbsp;
+    <a class="no-underline" href="/search/">Search</a>
   </div>
 </nav>
 {% else %}
@@ -47,6 +48,7 @@
     <a class="no-underline" href="/blog/">Blog</a>&nbsp;
     <a class="no-underline" href="/newsletters/">Newsletters</a>&nbsp;
     <a class="no-underline" href="/snapshots/">Snapshots</a>&nbsp;
+    <a class="no-underline" href="/search/">Search</a>
   </div>
 </nav>
 {% endif %}
@@ -89,7 +91,7 @@
         </div>
       </header>
       {% endblock detail_meta -%}
-      <section>
+      <section data-pagefind-body>
       
         <section class="main">
           <section id="start"></section>
