unify navbar style

--- a/templates/base.html
+++ b/templates/base.html
@@ -119,6 +119,21 @@
   <body>
     <section id="top">
       {% block nav_bar -%}
+      <nav class="navbar-snapshots-top">
+        <div>
+          <a class="navbar-snapshots-a" style="color: #ffffff" href="{{ config.base_url~lang_prefix_path }}" >
+            <img src="https://pinchlime-screenshots.s3.ap-northeast-1.amazonaws.com/pinchlime-logo-02-no-sub-96x96_Bgz9Ey.webp" width = "48" height = "48" alt="Logo of Pinchlime" >
+            <span class="navbar-snapshots-name">Pin 起來</span>
+          </a> 
+        </div>
+        <span>&nbsp;&nbsp;&nbsp;</span>
+        <div class="navbar-snapshots-name">
+          <a class="no-underline" href="/blog/">Blog</a>&nbsp;
+          <a class="no-underline" href="/newsletters/">Newsletters</a>&nbsp;
+          <a class="no-underline" href="/snapshots/">Snapshots</a>&nbsp;
+          <a class="no-underline" href="/search/">Search</a>
+        </div>
+      </nav>
       {% endblock nav_bar %}
     </section>
     <section id="root" >
